--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Alsu32.github.io/Homework-from-Ignat.git",
+  "homepage": "https://alsu32.github.io/Homework-from-Ignat.git",
   "name": "homework",
   "version": "0.1.0",
   "private": true,
